--- a/src/main/webapp/test.html
+++ b/src/main/webapp/test.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Title</title>
+  <script>
+    var request;
+    function sendInfo() {
+      var v = document.incrform.t1.value;
+      var url = "index.jsp?val=" + v;
+      if (window.XMLHttpRequest) {
+        request = new XMLHttpRequest();
+      }
+      else if (window.ActiveXObject) {
+        request = new ActiveXObject("Microsoft.XMLHTTP);
+      }
+      try {
+        request.onreadystatechange = getInfo;
+        request.open("GET", url, true);
+        request.send();
+      }
+      catch (e) {
+        alert("Unable to connect to server");
+      }
+    }
+
+    function getInfo() {
+      if (request.readyState == 4) {
+        var val = request.responseText;
+        document.getElementById('sid').innerHTML = val;
+      }
+    }
+  </script>
 </head>
 <body>
+  <marquee><h1>This is an example of ajax</h1></marquee>
 
+  <!--  The Form -->
+  <form name="incrform">
+    <input type="text" name="t1">
+    <input type="button" value="ShowTable" onclick="sendInfo()">
+  </form>
+
+  <!-- The Results -->
+  <span id="sid"></span>
 </body>
 </html>
