fix: fix show table bug

--- a/src/main/webapp/test.html
+++ b/src/main/webapp/test.html
@@ -12,7 +12,7 @@
         request = new XMLHttpRequest();
       }
       else if (window.ActiveXObject) {
-        request = new ActiveXObject("Microsoft.XMLHTTP);
+        request = new ActiveXObject("Microsoft.XMLHTTP");
       }
       try {
         request.onreadystatechange = getInfo;
